--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend ITAcademy Directory project (react + node tracks)",
   "main": "server.js",
   "scripts": {
+    "dev": "export NODE_ENV=development && nodemon server.js",
     "test": "test"
   },
   "keywords": [
@@ -14,10 +15,15 @@
   "author": "Kevin Mamaqi Kapllani",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "express-jsdoc-swagger": "^1.6.2",
+    "joi": "^17.4.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1"
   }
 }
