--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
   "author": "Kevin Mamaqi Kapllani",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jsdoc-swagger": "^1.6.2",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "sequelize-auto": "^0.8.3"
   }
 }
