--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend ITAcademy Directory project (react + node tracks)",
   "main": "server.js",
   "scripts": {
-    "dev": "export NODE_ENV=development && nodemon server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "dev-windows": "set NODE_ENV=development&& nodemon server.js",
     "test": "test"
   },
   "keywords": [
@@ -15,13 +16,19 @@
   "author": "Kevin Mamaqi Kapllani",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jsdoc-swagger": "^1.6.2",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-auto": "^0.8.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.28.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1"
