--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jsdoc-swagger": "^1.6.2",
+    "hashids": "^2.2.8",
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
