--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^7.28.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
+    "prisma": "^2.24.1",
     "sequelize-auto": "^0.8.3"
   }
 }
