--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sequelize-auto": "^0.8.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "ejs": "^3.1.6",
     "eslint": "^7.28.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
