--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "redis": "^3.1.2",
     "sequelize": "^6.3.5",
     "sequelize-auto": "^0.8.3"
   },
