--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
