--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "export NODE_ENV=development && nodemon server.js",
     "dev-windows": "set NODE_ENV=development&& nodemon server.js",
+    "dev:migrate": "npx prisma migrate dev --name init",
     "test": "test"
   },
   "keywords": [
@@ -30,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "pg": "^8.6.0",
     "redis": "^3.1.2",
     "sequelize": "^6.3.5",
     "sequelize-auto": "^0.8.3",
