--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
 # stage one
-FROM node:lts-alpine as builder
+FROM node:14 as builder
 
 # install dependencies for node-gyp
-RUN apk add --no-cache python make g++
+# RUN apk add --no-cache python make g++
 
 WORKDIR /app
 
@@ -10,7 +10,7 @@ COPY ./package.json prisma ./
 RUN npm install
 
 # stage two
-FROM node:lts-alpine
+FROM node:14
 
 ENV NODE_ENV=development
 
