--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
             dockerfile: Dockerfile.dev
         image: ita-api:dev
         container_name: ita-api-dev
+        platform: linux/x86_64
         volumes: 
             - /home/node/app/node_modules
             - .:/home/node/app
